Issue #15778: Coerce ImportError.args to a string when it isn't already one.

Patch by Dave Malcolm.